--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,6 +899,51 @@
     "    if k==ord(\"q\"):\n",
     "        break\n",
     "\n",
+    "cv2.destroyAllWindows()\n",
+    "cap.release()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Harr Cascade Object Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "face_cascade = cv2.CascadeClassifier(\"haar-cascade-files/haarcascade_frontalface_default.xml\")\n",
+    "eye_cascade = cv2.CascadeClassifier(\"haar-cascade-files/haarcascade_eye.xml\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture(0)\n",
+    "while True:\n",
+    "    ret,img = cap.read()\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    faces = face_cascade.detectMultiScale(gray, 1.3, 5)\n",
+    "    for (x,y,w,h) in faces:\n",
+    "        cv2.rectangle(img, (x,y), (x+w,y+h), (240,0,0), 2)\n",
+    "        roi_gray = gray[y:y+h, x:x+w]\n",
+    "        roi_color = img[y:y+h, x:x+w]\n",
+    "        eyes = eye_cascade.detectMultiScale(roi_gray)\n",
+    "        for (ex,ey,ew,eh) in eyes:\n",
+    "            cv2.rectangle(roi_color, (ex,ey), (ex+ew, ey+eh), (0,250,0), 2)\n",
+    "            \n",
+    "    show(\"img\",img)\n",
+    "    k = cv2.waitKey(30) & 0xFF\n",
+    "    if k==ord(\"q\"):\n",
+    "        break\n",
+    "        \n",
     "cv2.destroyAllWindows()\n",
     "cap.release()"
    ]
